--- a/polybar/config
+++ b/polybar/config
@@ -327,20 +327,28 @@ label-close = cancel
 label-close-foreground = ${colors.secondary}
 label-separator = |
 label-separator-foreground = ${colors.foreground-alt}
-menu-0-0 = reboot
+
+menu-0-0 = logout
 menu-0-0-exec = menu-open-1
-menu-0-1 = power off
+menu-0-1 = reboot
 menu-0-1-exec = menu-open-2
+menu-0-2 = power off
+menu-0-2-exec = menu-open-3
 
-menu-1-0 = cancel
-menu-1-0-exec = menu-open-0
-menu-1-1 = reboot
-menu-1-1-exec = sudo reboot
+menu-1-0 = logout
+menu-1-0-exec = i3msg exit
+menu-1-1 = cancel
+menu-1-1-exec = menu-open-0
 
-menu-2-0 = power off
-menu-2-0-exec = sudo poweroff
-menu-2-1 = cancel
-menu-2-1-exec = menu-open-0
+menu-2-0 = cancel
+menu-2-0-exec = menu-open-0
+menu-2-1 = reboot
+menu-2-1-exec = systemctl reboot
+
+menu-3-0 = power off
+menu-3-0-exec = systemctl poweroff
+menu-3-1 = cancel
+menu-3-1-exec = menu-open-0
 
 format-padding = 1
 
@@ -350,5 +358,3 @@ screenchange-reload = true
 ;compositing-background = screen
 ;compositing-foreground = source
 ;compositing-border = over
-
-; vim:ft=dosini
