--- a/polybar/config
+++ b/polybar/config
@@ -30,7 +30,7 @@ secondary = #FF6200
 alert = #fb4934
 
 [bar/top]
-;monitor = ${env:MONITOR:HDMI-1}
+monitor = ${env:MONITOR}
 width = 100%
 height = 21
 ;offset-x = 1%
@@ -124,6 +124,8 @@ label-focused-underline= ${colors.white}
 label-visible-underline = ${colors.foreground}
 label-focused-padding-left = 0
 label-focused-padding-right = 1
+label-visible-padding-left = 0
+label-visible-padding-right = 1
 
 label-unfocused-padding-right = 1
 label-unfocused-padding-left = 0
