--- a/tasks/dotfiles.yml
+++ b/tasks/dotfiles.yml
@@ -4,6 +4,6 @@
     src: "{{ item.src }}"
     dest: "{{ item.dest }}"
     state: link
-  when_items:
-  - src: "../ssh/config"
+  with_items:
+  - src: "{{ playbook_dir }}/ssh/config"
     dest: "~/.ssh/config"
