Switch homebrew install of bash and zsh to use loop

--- a/tasks/macos.yml
+++ b/tasks/macos.yml
@@ -13,11 +13,12 @@
 
 - name: install shells (macos)
   homebrew:
-    name:
-    - bash
-    - zsh
+    name: "{{ item }}"
     state: present
     update_homebrew: yes
+  loop:
+  - bash
+  - zsh
 
 - name: install homebrew packages
   homebrew:
