Add vs code dotfile to dotbot config

--- a/files/arch.conf.yaml
+++ b/files/arch.conf.yaml
@@ -11,3 +11,5 @@
     ~/.bash_aliases: sh/.bash_aliases
     ~/.bash_nag: sh/.bash_nag
     ~/.bashrc: sh/.bashrc
+    # ~/.zshrc: sh/.zshrc
+    ~/.config/Code/User/settings.json: code/settings.json
