--- a/files/macos.conf.yaml
+++ b/files/macos.conf.yaml
@@ -12,3 +12,4 @@
     ~/.bash_nag: sh/.bash_nag
     ~/.bashrc: sh/.bashrc
     ~/.zshrc: sh/.zshrc
+    ~/Library/Application Support/Code/User/settings.json: code/settings.json
