--- a/tasks/macos.yml
+++ b/tasks/macos.yml
@@ -11,7 +11,7 @@
   args:
     creates: "{{ homebrew_install_path }}/brew"
 
-- name: install shells (macos)
+- name: install shells (and update homebrew)
   homebrew:
     name: "{{ item }}"
     state: present
