--- a/default.config.yml
+++ b/default.config.yml
@@ -18,7 +18,7 @@ homebrew_packages:
 - readline
 - wget
 
-homebrew_packages_sierra:
+homebrew_packages_10_12:
 - mysql
 - node
 
@@ -28,15 +28,19 @@ homebrew_cask_apps:
 - docker
 - firefox
 - google-chrome
-- iterm2
 - macvim
 - slack
 - spotify
 - visual-studio-code
 
+homebrew_cask_apps_10_12:
+- iterm2
+
 oh_my_zsh_path: ~/.oh-my-zsh
 
-macos_defaults:
+macos_defaults: []
+
+macos_defaults_10_12:
 - domain: com.googlecode.iterm2
   key: PrefsCustomFolder
   type: string
