--- a/tasks/arch.yml
+++ b/tasks/arch.yml
@@ -1,3 +1,3 @@
 ---
 - name: run dotbot (arch)
-  command: "~/.dotbot/bin/dotbot -d {{ playbook_dir }}/files -c {{ playbook_dir }}/files/arch.conf.yaml"
+  command: "{{ dotbot_bin }} -d {{ playbook_dir }}/files -c {{ playbook_dir }}/files/arch.conf.yaml"
