--- a/tasks/dotfiles.yml
+++ b/tasks/dotfiles.yml
@@ -3,3 +3,6 @@
   git:
     repo: https://github.com/anishathalye/dotbot
     dest: "{{ dotbot_path }}"
+
+- name: install dotbot
+  command: "{{ dotbot_bin }} -d {{ playbook_dir }}/files -c {{ dotbot_config | default(dotbot_default_config) }}"
