--- a/tasks/dotfiles.yml
+++ b/tasks/dotfiles.yml
@@ -4,5 +4,5 @@
     repo: https://github.com/anishathalye/dotbot
     dest: "{{ dotbot_path }}"
 
-- name: install dotbot
+- name: execute dotbot
   command: "{{ dotbot_bin }} -d {{ playbook_dir }}/files -c {{ dotbot_config | default(dotbot_default_config) }}"
