--- a/vars/main.yml
+++ b/vars/main.yml
@@ -7,6 +7,8 @@ dotbot_default_config: "{{ playbook_dir }}/files/arch.conf.yml"
 
 oh_my_zsh_path: ~/.oh-my-zsh
 
+nvm_path: ~/.nvm
+
 pip_packages:
 - awscli
 - boto3
