Add vim pathogen install and vimrc

--- a/files/arch.conf.yml
+++ b/files/arch.conf.yml
@@ -11,5 +11,6 @@
     ~/.bash_aliases: sh/.bash_aliases
     ~/.bashrc: sh/.bashrc
     # ~/.zshrc: sh/.zshrc
+    ~/.vimrc: vim/.vimrc
     ~/.config/Code/User/settings.json: code/settings.json
     ~/.devilspie/vscode.ds: devilspie/vscode.ds
